dropdown overflow fix

--- a/src/_core/header/login/style.scss
+++ b/src/_core/header/login/style.scss
@@ -1,12 +1,12 @@
 .login {
-  .image-button {
-    padding: 0;
-    border-radius: 50%;
-  }
-
-  img {
-    height: 40px;
-    width: 40px;
-    border-radius: 50%;
-  }
+    .image-button {
+        padding: 0;
+        margin: 0 1em;
+        border-radius: 50%;
+    }
+    img {
+        height: 40px;
+        width: 40px;
+        border-radius: 50%;
+    }
 }
